Fix word wrap and overflowing in mobile resolution

--- a/pyworking_cz/static/main.css
+++ b/pyworking_cz/static/main.css
@@ -18,6 +18,10 @@ strong {
     font-weight: 600;
 }
 
+a {
+    word-break: break-all;
+}
+
 p {
     max-width: 50em;
 }
